@@ -47,6 +47,7 @@ Version 0.6
 - added support for IRI handling to many parts of Werkzeug.
 - development server properly logs to the werkzeug logger now.
 - added :func:`werkzeug.extract_path_info`
+- fixed a querystring quoting bug in :func:`url_fix`
 
 Version 0.5.1
 -------------
